--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "themes/LoveIt"]
 	path = themes/LoveIt
 	url = https://github.com/dillonzq/LoveIt
+[submodule "public"]
+	path = public
+	url = git@github.com:p2sousa/p2sousa.github.io.git
+	branch = main
